force-app/main/default/objects/MB_SVM_Spec__c/MB_SVM_Spec__c.object-meta.xml
<CustomObject>
    <description>MB Stock Vehicle Spec line</description>
    <label>MB SVM Spec</label>
    <nameField>
        <displayFormat>MBSVMS-{000000}</displayFormat>
        <label>MB SVM Spec Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MB SVM Specs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>