force-app/main/default/objects/MB_SVM_Spec__c/fields/Build_Spec_Comparison__c.field-meta.xml
<CustomField>
    <fullName>Build_Spec_Comparison__c</fullName>
    <label>Build Spec Comparison</label>
    <length>50</length>
    <type>Text</type>
</CustomField>