force-app/main/default/objects/MB_SVM_Spec__c/fields/MB_Stock_Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>MB_Stock_Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MB Stock Vehicle Master</label>
    <referenceTo>MB_Stock_Vehicle_Master__c</referenceTo>
    <relationshipLabel>MB SVM Specs</relationshipLabel>
    <relationshipName>MB_SVM_Specs</relationshipName>
    <type>Lookup</type>
</CustomField>