force-app/main/default/objects/MB_SVM_Spec__c/fields/Optkey__c.field-meta.xml
<CustomField>
    <fullName>Optkey__c</fullName>
    <label>Optkey</label>
    <length>20</length>
    <type>Text</type>
</CustomField>