force-app/main/default/objects/MB_SVM_Spec__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <length>10</length>
    <type>Text</type>
</CustomField>