force-app/main/default/objects/MB_SVM_Spec__c/fields/Vehicle_Spec_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Spec_ID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>Vehicle Spec ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>