force-app/main/default/objects/MB_SVM_Spec__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <columns>OType__c</columns>
    <columns>SVM_Spec_Compared_ID__c</columns>
    <columns>Vehicle_Spec_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All</label>
</ListView>